--- a/kong.env
+++ b/kong.env
@@ -12,3 +12,6 @@ KONG_PROXY_ERROR_LOG=/dev/stderr
 KONG_ADMIN_ERROR_LOG=/dev/stderr
 KONG_ADMIN_LISTEN=0.0.0.0:8001
 KONG_ADMIN_GUI_URL=http://localhost:8002
+
+KONG_TRACING_INSTRUMENTATIONS=all
+KONG_TRACING_SAMPLING_RATE=1.0
